fixed up some styling and added a time zone selector dropdown, with better formatting for the quote timestamps in the table for better readability

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,11 @@
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-.heading-div {
+.heading {
 	max-width: fit-content;
 	margin-left: auto;
   	margin-right: auto;
-	padding-top: 100px;
+	padding-top: 60px;
 	margin-bottom: 0px;
 	
 }
@@ -23,7 +23,29 @@
 }
 
 .submit-button {
-	padding-left: 10px;
+	padding-left: 40px;
+	padding-top: 30px;
+	margin-left: auto; 
+	margin-right: 0;
+}
+
+.name-input-box {
+	padding-bottom: 20px;
+}
+
+.sort-button {
+	padding-bottom: 20px;
+	padding-top: 10px;
+}
+
+.search-field {
+	display: flex;
+	gap: 10px;
+	max-width: fit-content;
+	margin-left: auto;
+  	margin-right: auto;
+	padding-top: 30px;
+	margin-bottom: 0px;
 }
 
 .submission-form {
@@ -31,7 +53,7 @@
 	max-width: fit-content;
 	margin-left: auto;
   	margin-right: auto;
-	padding-top: 100px;
+	padding-top: 75px;
 }
 
 .input-label {
